--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/06/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>drowned, found on shore of Menderes, Izmir (TR)</b><br>Source: HRFT<br>
+Found dead: <b>29/03/09</b><br>Number of person: <b>21</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after overcrowded boats sank due to stormy weather on way from Libya to Italy</b><br>Source: ABC/MUGAK/Deia/DiariodeNavarra/APDHA/Berria<br>
 
 <br>
 
