--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 15</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>Asaho (7 children, 0-9; 1 woman)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned on way from Turkey to Greece; family fleeing IS</b><br>Source: Imkander<br>
+Found dead: <b>08/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body found off Kaf Lasfer beach, between Sidi Lakhdar and Hadjadj, 36 km east of Mostaganem (DZ)</b><br>Source: ElW/Réf/IOM<br>
 
 <br>
 
