--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/04/08</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>stowaways, found on British container ship travelling from Ivory Coast to Vigo (ES); 11 survivors</b><br>Source: NOB/EarthT<br>
+Found dead: <b>11/10/02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>stowaways, suffocated inside trailer travelling from Agadir (MA) to Seville (ES)</b><br>Source: MNS/FR/taz/Tagesspiegel/AFP<br>
 
 <br>
 
