--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>jumped from window of apartment when police raided neighborhood in Boukhalef (MA)</b><br>Source: El Diario/RFI/PICUM<br>
+Found dead: <b>22/08/04</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>reportedly drowned in shipwreck off North Aegean coast (TR)</b><br>Source: DerStandard<br>
 
 <br>
 
