--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/08/06</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died and thrown overboard on way to Italy; 13 survivors</b><br>Source: LR/FE<br>
+Found dead: <b>11/11/17</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>Maden (3 children; 1 woman)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>2 found dead on beach of Lesbos (GR), family of teacher fleeing persecution in Turkey; 2 missing</b><br>Source: GulfToday/RTBF/TurkeyPurge/IOM/HelCoastG<br>
 
 <br>
 
