--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/07/17</b><br>Number of person: <b>16</b><br>Name, gender, age: <b>N.N. (8 women; 2 pregnant women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>13 found dead on crowded rubber boat off coast of Libya due to dangerous conditions; 3 missing, 181 rescued</b><br>Source: Reu./TheHuff/PBS/Proactiva/UNHCR/El Diario<br>
+Found dead: <b>27/06/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ramazan Kumluca (man, 19)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>suicide, hanged himself at Campsfield House removal centre (GB) after 3rd asylum claim was rejected</b><br>Source: TI/IRR/NCADC/BBC/PICUM/Independent<br>
 
 <br>
 
