--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/08/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 children)</b><br>Region of origin: <b>Libya</b><br>Cause of death: <b>reportedly died on boat travelling to Italy (IT)</b><br>Source: LR<br>
+Found dead: <b>Sep 96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Russia</b><br>Cause of death: <b>stowaway, found frozen to death in airplane wheel bay on flight from Russia to Rome (IT)</b><br>Source: MNS<br>
 
 <br>
 
