--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/08/02</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>died on refugee boat between Italy and Greece</b><br>Source: KO<br>
+Found dead: <b>29/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned, found floating near harbour of Algeciras (ES)</b><br>Source: MUGAK/APDHA<br>
 
 <br>
 
