--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/05/17</b><br>Number of person: <b>19</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead by fishermen off coast of Libya coast near Subratah (LY)</b><br>Source: IOM<br>
+Found dead: <b>16/10/02</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (3 girls)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found near Lesbos (GR) wearing life vests</b><br>Source: MNS/NCAs<br>
 
 <br>
 
