--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/06/12</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stowaways, died of asphyxiation and heat inside truck on ferry from Greece to Ancona (IT)</b><br>Source: PICUM/Infomob/FE/LR<br>
+Found dead: <b>May 03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>suffocated after getting trapped on border fence between Morocco and Spain in Melilla (ES)</b><br>Source: SOS<br>
 
 <br>
 
