--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/03/13</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of hypothermia after being rescued by Italian coast guard</b><br>Source: PICUM/CDS<br>
+Found dead: <b>18/10/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>froze to death near Kipsdorf (DE)</b><br>Source: German Government/ZAG<br>
 
 <br>
 
