--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2006</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ali Amen Nader (man)</b><br>Region of origin: <b>Yemen</b><br>Cause of death: <b>murdered by Yemeni authorities after asylum claim was rejected in the Netherlands</b><br>Source: IHRC<br>
+Found dead: <b>01/11/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bledar Qosku (man, 23)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>fatally injured by border guard in Kastoria (GR)</b><br>Source: GHM/OMCT<br>
 
 <br>
 
