--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/08/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Arslan Duzhiev (man, 37)</b><br>Region of origin: <b>Chechnya</b><br>Cause of death: <b>found hanging from a rope in cell at detention centre in Traiskirchen (AT)</b><br>Source: IRR<br>
+Found dead: <b>28/09/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Newzad (man, 20)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>suicide, in Saltdal refugee centre, Rognan (NO) after final rejection of asylum claim</b><br>Source: NRK<br>
 
 <br>
 
