--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/08/05</b><br>Number of person: <b>26</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>drowned after boat capsized south of Malta</b><br>Source: MNS/NOB/Unipa<br>
+Found dead: <b>19/02/17</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies recovered near Zawiyah (LY)</b><br>Source: IOM Libya<br>
 
 <br>
 
