--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/01/03</b><br>Number of person: <b>23</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>reportedly drowned near Santa Maria di Leuca (IT) while attempting to reach Italy</b><br>Source: Vita<br>
+Found dead: <b>Jul 07</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (1 child; 11 adults)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>1 drowned, dinghy collided with fishing boat on way from Libya to Italy; 11 missing</b><br>Source: LR<br>
 
 <br>
 
