--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/11/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, driver lost control of truck attempting to escape police in Preveza (GR)</b><br>Source: KI/FE<br>
+Found dead: <b>30/09/17</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (2 children; 4 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by Turkish border guards near Diriyah (ST) while trying to cross Syrian-Turkish border</b><br>Source: Human Rights Watch/IOM<br>
 
 <br>
 
