--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/01/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bouasrai Benothmane</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>thrown out of window during arrest in Algeria after deportation from Belgium</b><br>Source: Vers l'Avenir/Solidaire/IRR/CARF<br>
+Found dead: <b>15/09/99</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after small boat travelling to Spain capsized off coast of Tarifa (ES)</b><br>Source: MNS/MUGAK<br>
 
 <br>
 
