--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/12/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Necmettin T. (boy, 17)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>suicide, set himself on fire in Hamburg (DE) after asylum application was rejected</b><br>Source: ZAG<br>
+Found dead: <b>01/07/17</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (6 women; 3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned trying to cross the Mediterranean Sea between Libya and Italy</b><br>Source: CoastGuardS/IOM<br>
 
 <br>
 
