--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/06/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Celal Akan (man, 36)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>died from liver disorder in Celle (DE) after refusing to pay for operation</b><br>Source: taz/DPA/MNS/ZAG<br>
+Found dead: <b>22/08/01</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after being forced to swim ashore to Almería (ES) although they did not know how to swim</b><br>Source: MNS/AP<br>
 
 <br>
 
