--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/01/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after jumping from ferry named "Vega" in Brindisi (IT) in effort to escape repatriation</b><br>Source: ILM<br>
+Found dead: <b>25/04/06</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck near Kenitra (MA) while trying to reach Spain</b><br>Source: APDHA<br>
 
 <br>
 
