--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/04/06</b><br>Number of person: <b>25</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck near Kenitra (MA) while trying to reach Spain</b><br>Source: APDHA<br>
+Found dead: <b>29/04/16</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Nigeria, Guinea, Mali, Ivory Coast</b><br>Cause of death: <b>reportedly missing after ship travelling to Italy wrecked off coast of Libya</b><br>Source: AFP/Libération Maroc<br>
 
 <br>
 
