--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/07/17</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned off coast of Al Hoceima (MA); 48 survivors</b><br>Source: Caminando/Ell Diario/IOM<br>
+Found dead: <b>07/09/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Eugene Ejike Obiora (man, 48)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>strangled by policeman at social welfare office in Trondheim (NO), asylum seeker</b><br>Source: MNS/NR<br>
 
 <br>
 
