--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/09/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Eugene Ejike Obiora (man, 48)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>strangled by policeman at social welfare office in Trondheim (NO), asylum seeker</b><br>Source: MNS/NR<br>
+Found dead: <b>19/04/15</b><br>Number of person: <b>844</b><br>Name, gender, age: <b>N.N. (50 children; 250 women)</b><br>Region of origin: <b>Mali, Gambia, Sierra Leone</b><br>Cause of death: <b>drowned after collision with vessel near Gergarish (LY); hundreds trapped in ship</b><br>Source: VK/MNS/NRC/AFP/Le Monde/STAMPA<br>
 
 <br>
 
