--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/15</b><br>Number of person: <b>844</b><br>Name, gender, age: <b>N.N. (50 children; 250 women)</b><br>Region of origin: <b>Mali, Gambia, Sierra Leone</b><br>Cause of death: <b>drowned after collision with vessel near Gergarish (LY); hundreds trapped in ship</b><br>Source: VK/MNS/NRC/AFP/Le Monde/STAMPA<br>
+Found dead: <b>Feb 06</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, ±27)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>trafficker cut their throats while crossing Iranian-Turkish border because they collapsed and couldn't keep going</b><br>Source: witness (Sarfraz Ali Khan)<br>
 
 <br>
 
