--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 15</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned between Libya and Italy; 633 rescued</b><br>Source: Imkander<br>
+Found dead: <b>06/05/03</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned, found near Ba Kacem beach in Tangier (MA)</b><br>Source: MUGAK<br>
 
 <br>
 
