--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/03/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kingsley Williamson (man)</b><br>Region of origin: <b>Jamaica</b><br>Cause of death: <b>suicide, hanged himself in Norwich prison (GB) while awaiting deportation</b><br>Source: IRR<br>
+Found dead: <b>30/08/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Roumian Tisse (man, 26)</b><br>Region of origin: <b>Cameroon</b><br>Cause of death: <b>died trying to climb fence separating Morocco from the Spanish enclave of Melilla (ES)</b><br>Source: ProAsyl/ELM<br>
 
 <br>
 
