--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/11/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned on way from Libya to Italy; 580 rescued</b><br>Source: NewArab<br>
+Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Christelle Makodila Nsimba (girl, 6)</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
 
 <br>
 
