--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 12</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died over the course of 2012 in Norwegian reception centres</b><br>Source: Foreigner/MNS<br>
+Found dead: <b>18/04/17</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found crushed on migrant boat in the Mediterranean Sea between Libya and Italy</b><br>Source: IOM Italy<br>
 
 <br>
 
