--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/02/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Cheick Nydiaye (man, 37)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>pushed onto metro track by police officers during chase in Athens (GR)</b><br>Source: CS<br>
+Found dead: <b>10/03/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nassim (man)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died in a fire caused by rebellion at detention centre in Serraino Vulpitta di Trapani (IT)</b><br>Source: MP/ARCI/I.B.CPT/GdV/quibla/INDi<br>
 
 <br>
 
